<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/details_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ebeff0"
        tools:context=".ui.neighbour_details.NeighbourDetailsActivity">

        <ImageView
            android:id="@+id/neighbour_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/neighbour_image"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fav_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="@dimen/fab_margin"
            app:backgroundTint="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@id/neighbour_image"
            app:layout_constraintEnd_toEndOf="@id/neighbour_image"
            app:layout_constraintTop_toBottomOf="@id/neighbour_image"
            app:srcCompat="@drawable/ic_star_border_yellow_24" />

        <TextView
            android:id="@+id/neighbour_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="@id/neighbour_image"
            app:layout_constraintStart_toStartOf="parent" />

        <android.support.v7.widget.CardView
            android:id="@+id/first_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:elevation="2dp"
            app:layout_constraintStart_toEndOf="@id/neighbour_image"
            app:layout_constraintTop_toBottomOf="@id/neighbour_image">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/neighbour_name_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/neighbour_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:drawableStart="@drawable/ic_baseline_location_on_24"
                    android:drawablePadding="2dp" />

                <TextView
                    android:id="@+id/neighbour_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:drawableStart="@drawable/ic_baseline_phone_24"
                    android:drawablePadding="2dp" />

                <TextView
                    android:id="@+id/neighbour_site"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:drawableStart="@drawable/ic_baseline_language_24"
                    android:drawablePadding="2dp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:elevation="2dp"
            app:layout_constraintStart_toEndOf="@id/first_cardview"
            app:layout_constraintTop_toBottomOf="@id/first_cardview">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a_propos_de_moi"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/aboutMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>
</ScrollView>